# aplcam

./: .gitignore  CMakeLists.txt  conanfile.py  fips.yml
cmake/: AplCamConfig.cmake  FindApriltags.cmake  FindLevelDB.cmake
include/: april_tag_board_generator.h  april_tag_detection_set.h  board.h  calibration_db.h  calibration_opts_common.h  calibration_serializer.h  composite_canvas.h  cv_types.h  detection.h  detection_db.h  detection_set.h  distortion_angular_polynomial.h  distortion_model.h  distortion_radial_polynomial.h  feature_tracker.h  frame_source.h  histogram.h  histogram_impl.h  image_accumulator.h  interlaced_frame.h  motion_model.h  sonar_pose.h  splitter_common.h  stereo_calibration.h  synchronizer.h  trendnet_time_code.h  types.h  video.h
include/AplCam/: april_tag_board_generator.h  april_tag_detection_set.h  calibration_db.h  calibration_result.h  calibration_serializer.h  chess_board_generator.h  composite_canvas.h  cv_types.h  detection_db.h  detection_set.h  feature_tracker.h  file_utils.h  hough_circles.h  image_accumulator.h  image_pair.h  interlaced_frame.h  json_calibration_serializer.h  leveldb_calibration_db.h  leveldb_detection_db.h  random.h  sonar_pose.h  splitter_common.h  stereo_calibration.h  synchronizer.h  trendnet_time_code.h  types.h  video.h
include/AplCam/board/: apriltags.h  board.h  circle.h  trailer_hitch.h
include/AplCam/calib_frame_selectors/: calib_frame_selector_opts.h  calib_frame_selectors.h
include/AplCam/detection/: apriltags.h  circle.h  detection.h
include/AplCam/distortion/: angular_polynomial.h  camera_factory.h  ceres_reprojection_error.h  distortion_fisheye.h  distortion_model.h  distortion_stereo.h  pinhole_camera.h  radial_polynomial.h
include/AplCam/frame_selector/: frame_selector.h
include/board/: apriltags.h  circle.h
include/calib_frame_selectors/: calib_frame_selector_opts.h  calib_frame_selectors.h
include/detection/: apriltags.h  circle.h  detection.h
include/distortion/: angular_polynomial.h  camera_factory.h  distortion_model.h  distortion_stereo.h  pinhole_camera.h  radial_polynomial.h
include/frame_selector/: frame_selector.h
include/video_splitters/: video_splitters.h
lib/: CMakeLists.txt  angular_polynomial.cpp  april_tag_board_generator.cpp  april_tag_detection_set.cpp  bits_to_hex.cpp  board.cpp  calibration_db.cpp  calibration_result.cpp  calibrator.cpp  camera_factory.cpp  ceres_radial_polynomial.cpp  chess_board_generator.cpp  detection.cpp  detection_db.cpp  detection_set.cpp  distortion_model.cpp  distortion_stereo.cpp  feature_tracker.cpp  fisheye.cpp  hough_circles.cpp  image.cpp  image_accumulator.cpp  leveldb_calibration_db.cpp  leveldb_detection_db.cpp  motion_model.cpp  my_undistort.cpp  opencv_radial_polynomial.cpp  pinhole_camera.cpp  sonar_pose.cpp  splitter_common.cpp  stereo_calibration.cpp  synchronizer.cpp  trendnet_time_code.cpp  types.cpp  video.cpp
lib/board/: apriltags.cpp  board.cpp  circle.cpp  trailer_hitch.cpp
lib/calib_frame_selectors/: calib_frame_selector_opts.cpp  keyframe_frame_selector.cpp  random_frame_selector.cpp
lib/detection/: apriltags.cpp  circle.cpp  detection.cpp
lib/distortion/: angular_polynomial.cpp  camera_factory.cpp  camera_model.cpp  ceres_radial_polynomial.cpp  distortion_model.cpp  distortion_stereo.cpp  opencv_radial_polynomial.cpp  pinhole_camera.cpp  radial_polynomial.cpp  stereo_calibration.cpp
lib/frame_selector/: keyframe_selector.cpp
old/: kch_detection_db.h
old/lib/: kch_detection_db.cpp
test/unit/: CMakeLists.txt  InMemoryDetectionDb.cpp  LevelDbCalibrationDb_test.cpp  LevelDbDetectionDb_test.cpp
tools/: CMakeLists.txt  apriltags_player.cpp  extract_one_frame.cpp  video_splitter.cpp
